syntax="proto3";

package Students;

	message FullName
	{
		string name = 1;
		string surname = 2;
		optional string middle_name = 3;
	}

	message Student
	{
		FullName name = 1;
		repeated int32 marks = 2;
		double average_mark = 3;
	}

	message StudentsGroup
	{
		repeated Student student_group = 1;
	}
